# sims4mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: index.html
src/sims4mcp/: __init__.py  __main__.py  cli.py  mcp_server.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_models.py  test_parser.py
