[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sims4mcp"
version = "0.1.0"
description = "CLI and MCP adapter for The Sims 4 save files"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "lz4>=4.0",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
sims4mcp = "sims4mcp.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sims4mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
